# aissemble

./: pom.xml
.github/workflows/: build.yml
extensions/: pom.xml
extensions/extensions-daz/: README.md  pom.xml  pyproject.toml
extensions/extensions-daz/src/daz/: __init__.py
extensions/extensions-encryption/aissemble-extensions-encryption-vault-python/: README.md  pyproject.toml
extensions/extensions-encryption/aissemble-extensions-encryption-vault-python/tests/features/steps/: encryption_steps.py
foundation/aissemble-foundation-core-python/: pyproject.toml
foundation/aissemble-foundation-core-python/src/aissemble_core_metadata/: metadata_model.py
foundation/aissemble-foundation-core-python/src/inference/: rest_inference_client.py
foundation/aissemble-foundation-core-python/src/policy_manager/policy/: policy.py
foundation/foundation-configuration-store/: pom.xml
foundation/foundation-configuration-store/src/test/resources/specifications/: load-configurations.feature
foundation/foundation-core-java/src/test/resources/specifications/configure-policies/: configure-rules.feature
foundation/foundation-encryption/aissemble-foundation-encryption-policy-python/: pyproject.toml
foundation/foundation-encryption/aissemble-foundation-encryption-policy-python/tests/features/steps/: data_encryption_policy_steps.py
foundation/foundation-mda/src/main/resources/: targets.json
foundation/foundation-mda/src/main/resources/templates/data-delivery-pyspark/: abstract.data.action.py.vm  asynchronous.processor.base.py.vm  (+2 more)
foundation/foundation-security/aissemble-foundation-pdp-client-python/: README.md  pyproject.toml
(+17 files in other folders)
